# cs312oop_lab1

./: CMakeLists.txt  README.md  TASK1.md  TASK2.md
reviews/: task2_review1.md  task2_review2.md  task2_review3.md
task1/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp
task2/: CMakeLists.txt  Deltoid.hpp  DeltoidMenu.cpp  DeltoidMenu.hpp  DeltoidTests.cpp  Menu.cpp  Menu.hpp  main.cpp  tests.cpp
